--- a/STARTERKIT/package.json
+++ b/STARTERKIT/package.json
@@ -5,10 +5,23 @@
   "license": "GPL v2",
   "devDependencies": {
     "gulp": "~3.5.5",
-    "gulp-ruby-sass": "~0.4.0",
-    "gulp-clean": "~0.2.4",
     "gulp-autoprefixer": "0.0.6",
+    "gulp-cssshrink": "^0.1.4",
+    "gulp-livereload": "~1.2.0",
+    "gulp-minify-css": "^0.3.7",
+    "gulp-rename": "^1.2.0",
+    "gulp-ruby-sass": "~0.4.0",
     "gulp-util": "~2.2.14",
-    "gulp-livereload": "~1.2.0"
-  }
+    "penthouse": "^0.2.5"
+  },
+  "description": "Build process for glacier sub theme",
+  "main": "gulpfile.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/maoberlehner/glacier"
+  },
+  "bugs": {
+    "url": "https://github.com/maoberlehner/glacier/issues"
+  },
+  "homepage": "https://github.com/maoberlehner/glacier"
 }
