--- a/STARTERKIT/package.json
+++ b/STARTERKIT/package.json
@@ -16,5 +16,8 @@
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.2"
   },
-  "main": "gulpfile.js"
+  "main": "gulpfile.js",
+  "scripts": {
+    "postinstall": "find node_modules/ -name '*.info' -type f -delete"
+  }
 }
