--- a/STARTERKIT/bower.json
+++ b/STARTERKIT/bower.json
@@ -15,6 +15,7 @@
     "avalanche_base_form": "^2.0.0",
     "avalanche_base_layout": "^2.0.0",
     "avalanche_base_typography": "^2.0.0",
+    "avalanche_utility_visibility": "^2.0.0",
     "normalize.css": "~3.0.3"
   }
 }
